# basicpitch.cpp

./: .gitmodules  Makefile  README.md
ort-model/model/: model.cpp  model.ort.cpp  model.ort.h
scripts/: README.md
src/: midi_notes.cpp  ort_inference.cpp
src_cli/: CMakeLists.txt  basicpitch.cpp
